--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+/Client/node_modules
+/Server/node_modules
 dist
 dist-ssr
 *.local
@@ -22,3 +24,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+/README-hw
