--- a/Server/package.json
+++ b/Server/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "start": "nodemon ./src/index.js"
+    
   },
   "author": "Jorge Osterrielt",
   "license": "ISC",
